# kvrrj

./: .gitignore  dev.ipynb  install_uv_lbttk.ps1  notebook.ipynb  pyproject.toml  setup.ps1
flask_test/: call_python_compute_server.py  run_python_compute_server.py
src/kvrrj/: __init__.py  geometry.py  logging.py  solar.py  solar2.py  sri.py  util.py  wind.py  ws_base.py
src/kvrrj/color/: __init__.py  to_hex.py  to_ladybug_color.py  to_plotly_color.py  to_rgba.py  util.py
src/kvrrj/geometry/: __init__.py  icosphere.py  ladybug.py  mesh.py  to_plotly.py  to_shapely.py  util.py
src/kvrrj/honeybee/: to_shade.py
src/kvrrj/honeybee_radiance/: __init__.py  util.py
src/kvrrj/ladybug/: __init__.py  analysis_period.py  analysisperiod.py  datatype.py  dt.py  location.py  to_ladybug.py  to_pandas.py  to_string.py  util.py
src/kvrrj/viz/: color.py  colormap.py  geometry.py  image.py
tests/: .coverage  __init__.py  test_geometry.py  test_image.py  test_kvrrj.py  test_ladybug.py  test_ladybug_analysis_period.py  test_ladybug_datatype.py  test_ladybug_dt.py  test_main.py  test_solar.py  test_solar2.py  test_sri.py  test_util.py  test_viz.py  test_wind.py
tests/__pycache__/: test_color.cpython-310-pytest-8.3.5.pyc.30900  test_color.cpython-310-pytest-8.3.5.pyc.38676  test_ladybug.cpython-310-pytest-8.3.5.pyc.31284  test_ladybug.cpython-310-pytest-8.3.5.pyc.43288
tests/color/: __init__.py  test_color_to_hex.py  test_color_to_ladybug_color.py  test_color_to_plotly_color.py  test_color_to_rgba.py
tests/geometry/: __init__.py  test_geometry_icosphere.py  test_geometry_to_plotly.py  test_geometry_to_shapely.py  test_geometry_util.py
tests/ladybug/: test_to_pandas.py  test_util.py
